Upgrade to storage-0.0.8